[gd_scene load_steps=13 format=3 uid="uid://bqkfwbqyhhejx"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_55jxp"]
[ext_resource type="Texture2D" uid="uid://dmqviu8k5umr1" path="res://assets/kenney_simple-space/PNG/Retina/ship_H.png" id="2_2nwxi"]
[ext_resource type="Texture2D" uid="uid://b70hoxvd18v81" path="res://assets/kenney_particle-pack/PNG (Transparent)/smoke_08.png" id="2_2tipb"]
[ext_resource type="Script" path="res://scenes/player/player_vfx.gd" id="2_etdir"]
[ext_resource type="Texture2D" uid="uid://ddetsjvik0nbj" path="res://assets/kenney_particle-pack/PNG (Transparent)/muzzle_04.png" id="3_52eii"]
[ext_resource type="Script" path="res://scenes/player/player_trail.gd" id="3_jdr2f"]
[ext_resource type="Texture2D" uid="uid://bygbfwy5io8e1" path="res://assets/kenney_particle-pack/PNG (Transparent)/muzzle_02.png" id="3_jwgdo"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8daai"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_jwgdo")
}, {
"duration": 1.0,
"texture": ExtResource("3_52eii")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="Curve" id="Curve_pdpak"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 0.592453), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ksqr8"]
height = 37.28

[sub_resource type="Curve" id="Curve_teldy"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_emag7"]
radius = 8.0

[node name="Player" type="RigidBody2D"]
linear_damp = 0.5
angular_damp = 1.0
script = ExtResource("1_55jxp")

[node name="VFX" type="Node2D" parent="."]
script = ExtResource("2_etdir")

[node name="GPUParticles_Thrust" type="CPUParticles2D" parent="VFX"]
self_modulate = Color(0.866179, 0.383594, 0.425694, 1)
position = Vector2(-18, 0)
rotation = 3.14159
amount = 400
lifetime_randomness = 0.5
fixed_fps = 30
draw_order = 1
texture = ExtResource("2_2tipb")
emission_shape = 3
emission_rect_extents = Vector2(0.1, 3.17)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 30.0
initial_velocity_max = 50.0
angle_max = 360.0
scale_amount_min = 0.0
scale_amount_max = 0.01
metadata/_edit_group_ = true

[node name="Sprite_Thrust" type="AnimatedSprite2D" parent="VFX/GPUParticles_Thrust"]
visible = false
self_modulate = Color(0.937255, 0.603922, 0.423529, 0.764706)
position = Vector2(8.6, 0)
rotation = 1.5708
scale = Vector2(0.0524863, 0.0524863)
sprite_frames = SubResource("SpriteFrames_8daai")
frame_progress = 0.868346

[node name="GPUParticles_Break_Left" type="CPUParticles2D" parent="VFX"]
position = Vector2(17, -5)
emitting = false
amount = 100
lifetime = 0.5
lifetime_randomness = 0.5
fixed_fps = 30
draw_order = 1
texture = ExtResource("2_2tipb")
spread = 1.0
gravity = Vector2(0, 0)
initial_velocity_min = 30.0
initial_velocity_max = 50.0
scale_amount_min = 0.0
scale_amount_max = 0.08
scale_amount_curve = SubResource("Curve_pdpak")
metadata/_edit_group_ = true

[node name="Sprite_BreakLeft" type="Sprite2D" parent="VFX/GPUParticles_Break_Left"]
visible = false
self_modulate = Color(0.678431, 0.403922, 0.313726, 0.823529)
position = Vector2(4, 3.55271e-15)
rotation = 1.5708
scale = Vector2(0.0176663, 0.0258769)
texture = ExtResource("3_52eii")

[node name="GPUParticles_Break_Right" type="CPUParticles2D" parent="VFX"]
position = Vector2(17, 5)
emitting = false
amount = 100
lifetime = 0.5
lifetime_randomness = 0.5
fixed_fps = 30
draw_order = 1
texture = ExtResource("2_2tipb")
spread = 1.0
gravity = Vector2(0, 0)
initial_velocity_min = 30.0
initial_velocity_max = 50.0
scale_amount_min = 0.0
scale_amount_max = 0.08
scale_amount_curve = SubResource("Curve_pdpak")
metadata/_edit_group_ = true

[node name="Sprite_BreakRight" type="Sprite2D" parent="VFX/GPUParticles_Break_Right"]
visible = false
self_modulate = Color(0.678431, 0.403922, 0.313726, 0.823529)
position = Vector2(4, 3.55271e-15)
rotation = 1.5708
scale = Vector2(0.0176663, 0.0258769)
texture = ExtResource("3_52eii")

[node name="GPUParticles_SpinLeft_Top" type="CPUParticles2D" parent="VFX"]
position = Vector2(17, 5)
rotation = 0.872665
emitting = false
amount = 100
lifetime = 0.5
lifetime_randomness = 0.5
fixed_fps = 30
draw_order = 1
texture = ExtResource("2_2tipb")
spread = 1.0
gravity = Vector2(0, 0)
initial_velocity_min = 30.0
initial_velocity_max = 50.0
scale_amount_min = 0.0
scale_amount_max = 0.05
scale_amount_curve = SubResource("Curve_pdpak")
metadata/_edit_group_ = true

[node name="Sprite_SpinLeft_Top" type="Sprite2D" parent="VFX/GPUParticles_SpinLeft_Top"]
visible = false
self_modulate = Color(0.678431, 0.403922, 0.313726, 0.823529)
position = Vector2(4, 3.55271e-15)
rotation = 1.5708
scale = Vector2(0.0176663, 0.0258769)
texture = ExtResource("3_52eii")

[node name="GPUParticles_SpinRight_Top" type="CPUParticles2D" parent="VFX"]
position = Vector2(17, -5)
rotation = 5.23599
emitting = false
amount = 100
lifetime = 0.5
lifetime_randomness = 0.5
fixed_fps = 30
draw_order = 1
texture = ExtResource("2_2tipb")
spread = 1.0
gravity = Vector2(0, 0)
initial_velocity_min = 30.0
initial_velocity_max = 50.0
scale_amount_min = 0.0
scale_amount_max = 0.05
scale_amount_curve = SubResource("Curve_pdpak")
metadata/_edit_group_ = true

[node name="Sprite_SpinRight_Top" type="Sprite2D" parent="VFX/GPUParticles_SpinRight_Top"]
visible = false
self_modulate = Color(0.678431, 0.403922, 0.313726, 0.823529)
position = Vector2(4, 3.55271e-15)
rotation = 1.5708
scale = Vector2(0.0176663, 0.0258769)
texture = ExtResource("3_52eii")

[node name="GPUParticles_SpinLeft_Bottom" type="CPUParticles2D" parent="VFX"]
visible = false
position = Vector2(-13, -6)
rotation = -2.44346
emitting = false
amount = 50
lifetime = 0.5
lifetime_randomness = 0.5
fixed_fps = 30
draw_order = 1
texture = ExtResource("2_2tipb")
spread = 1.0
gravity = Vector2(0, 0)
initial_velocity_min = 30.0
initial_velocity_max = 50.0
scale_amount_min = 0.0
scale_amount_max = 0.05
scale_amount_curve = SubResource("Curve_pdpak")
metadata/_edit_group_ = true

[node name="Sprite_SpinLeft_Bottom" type="Sprite2D" parent="VFX/GPUParticles_SpinLeft_Bottom"]
visible = false
self_modulate = Color(0.678431, 0.403922, 0.313726, 0.823529)
position = Vector2(4, 3.55271e-15)
rotation = 1.5708
scale = Vector2(0.0176663, 0.0258769)
texture = ExtResource("3_52eii")

[node name="GPUParticles_SpinRight_Bottom" type="CPUParticles2D" parent="VFX"]
visible = false
position = Vector2(-13, 6)
rotation = 2.44346
emitting = false
amount = 50
lifetime = 0.5
lifetime_randomness = 0.5
fixed_fps = 30
draw_order = 1
texture = ExtResource("2_2tipb")
spread = 1.0
gravity = Vector2(0, 0)
initial_velocity_min = 30.0
initial_velocity_max = 50.0
scale_amount_min = 0.0
scale_amount_max = 0.05
scale_amount_curve = SubResource("Curve_pdpak")
metadata/_edit_group_ = true

[node name="Sprite_SpinRight_Bottom" type="Sprite2D" parent="VFX/GPUParticles_SpinRight_Bottom"]
visible = false
self_modulate = Color(0.678431, 0.403922, 0.313726, 0.823529)
position = Vector2(4, 3.55271e-15)
rotation = 1.5708
scale = Vector2(0.0176663, 0.0258769)
texture = ExtResource("3_52eii")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(3, 0)
rotation = 1.5708
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_2nwxi")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ksqr8")

[node name="PlayerTrailLeftWing" type="Line2D" parent="."]
show_behind_parent = true
width = 3.0
width_curve = SubResource("Curve_teldy")
default_color = Color(0.247846, 0.25498, 0.279955, 1)
texture_mode = 2
script = ExtResource("3_jdr2f")
length = 30
is_left_trail = true

[node name="PlayerTrailRightWing" type="Line2D" parent="."]
show_behind_parent = true
width = 3.0
width_curve = SubResource("Curve_teldy")
default_color = Color(0.247846, 0.25498, 0.279955, 1)
texture_mode = 2
script = ExtResource("3_jdr2f")
length = 30

[node name="DrawStartingPoint" type="Marker2D" parent="."]
position = Vector2(11, 0)
metadata/_edit_lock_ = true

[node name="PlayerTrailStartingPointLeft" type="Marker2D" parent="."]
position = Vector2(-12, -23)

[node name="PlayerTrailStartingPointRight" type="Marker2D" parent="."]
position = Vector2(-12, 23)

[node name="ConnectionTrailAreaDetection" type="Area2D" parent="."]
position = Vector2(-10, 0)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConnectionTrailAreaDetection"]
shape = SubResource("CircleShape2D_emag7")
debug_color = Color(0.652174, 0.518745, 3.85046e-07, 0.42)

[node name="CameraPlayer" type="Camera2D" parent="."]
enabled = false
zoom = Vector2(5, 5)
